--- a/privacy.html
+++ b/privacy.html
@@ -43,6 +43,7 @@
   <p><strong>scripting</strong> — allows the extension to inject and remove CSS stylesheets on supported pages.</p>
   <p><strong>storage</strong> — stores stylesheet preferences and enabled/disabled state locally on your device.</p>
   <p><strong>nativeMessaging</strong> — enables communication between the Safari extension and the native macOS app to read bundled stylesheets stored on your device.</p>
+  <p><strong>webNavigation</strong> — allows the extension to detect when a page navigation has committed so styles can be injected before the page renders.</p>
   <p>None of these permissions are used to collect, transmit, or share any data.</p>
 
   <h2>Data Retention and Deletion</h2>
